[package]
name = "battlestation"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
iced_fonts = { version = "0.2.1", features = ["nerd"] }
libc = "0.2.176"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["io-util", "macros", "process", "signal", "sync", "time"] }
tokio-stream = "0.1.17"

[dev-dependencies]
itertools = "0.14.0"
rand = "0.9.2"
